--- a/app/src/main/res/layout/activity_client_details.xml
+++ b/app/src/main/res/layout/activity_client_details.xml
@@ -56,7 +56,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         tools:src="@drawable/ic_baseline_person_24"
-                        srcUri="@{clientDetailsViewModel.client.image}"
+                        srcUriClientDetails="@{clientDetailsViewModel.client.image}"
                         android:elevation="@dimen/cardview_default_elevation"
                         android:scaleType="centerCrop" />
                 </androidx.cardview.widget.CardView>
