--- a/app/src/main/res/layout/activity_clients_add.xml
+++ b/app/src/main/res/layout/activity_clients_add.xml
@@ -9,40 +9,62 @@
             type="com.listen.to.miskiatty.viewmodel.ClientsAddViewModel" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".view.ui.clients.ClientsAddActivity">
-
-        <com.google.android.material.appbar.AppBarLayout
+        android:layout_height="match_parent">
+        <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:elevation="8dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".view.ui.clients.ClientsAddActivity">
 
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/toolbar_clients_add"
+            <com.google.android.material.appbar.AppBarLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/white"
-                app:title="Añadir Clientes"
-                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-                style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
-                app:menu="@menu/menu_clients_add" />
-        </com.google.android.material.appbar.AppBarLayout>
+                android:layout_height="wrap_content"
+                android:elevation="8dp">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+                <com.google.android.material.appbar.MaterialToolbar
+                    android:id="@+id/toolbar_clients_add"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/white"
+                    app:title="Añadir Clientes"
+                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
+                    style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
+                    app:menu="@menu/menu_clients_add" />
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.coordinatorlayout.widget.CoordinatorLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_contacts"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:setAdapter="@{clientAddViewModel.recyclerContactsAdapter}"/>
+
+            </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <RelativeLayout
+            android:id="@+id/progress_circular"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_contacts"
+            android:layout_height="match_parent"
+            android:visibility="invisible">
+            <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                app:setAdapter="@{clientAddViewModel.recyclerContactsAdapter}"/>
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                android:background="@color/colorPrimary"
+                android:alpha="0.6"/>
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"/>
+        </RelativeLayout>
+    </RelativeLayout>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
