--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -48,7 +48,7 @@
                      android:layout_width="match_parent"
                      android:layout_height="200dp"
                      android:layout_margin="2dp"
-                     srcUri="@{productDetailsViewModel.product.image}"
+                     srcUriProduct="@{productDetailsViewModel.product.image}"
                      android:background="@drawable/sp_rounded_rectangle"
                      android:elevation="@dimen/cardview_default_elevation"
                      android:scaleType="centerCrop" />
