--- a/app/src/main/res/layout/template_product.xml
+++ b/app/src/main/res/layout/template_product.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:src="@drawable/ic_launcher_background"
-                srcUri="@{productViewModel.getProductAt(position).image}"
+                srcUriProduct="@{productViewModel.getProductAt(position).image}"
                 android:scaleType="centerCrop" />
 
             <androidx.appcompat.widget.AppCompatTextView
