--- a/app/src/main/res/layout/template_top_client.xml
+++ b/app/src/main/res/layout/template_top_client.xml
@@ -31,17 +31,16 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:elevation="@dimen/cardview_default_elevation"
                 android:layout_margin="2dp"
                 android:layout_gravity="center"
-                app:cardCornerRadius="80dp">
+                app:cardCornerRadius="20dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center"
                     tools:src="@drawable/ic_baseline_person_24"
-                    srcUri="@{clientViewModel.getTopClientAt(position).image}"
+                    srcUriClient="@{clientViewModel.getTopClientAt(position).image}"
                     android:scaleType="centerCrop" />
             </androidx.cardview.widget.CardView>
 
@@ -59,7 +58,8 @@
                 android:gravity="center|start"
                 tools:text="Cliente"
                 android:text="@{clientViewModel.getTopClientAt(position).name}"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textColor="@color/white"/>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
