--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -24,7 +24,7 @@
                 android:layout_height="match_parent">
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_products"
+                    android:id="@+id/rv_orders"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:paddingBottom="60dp"
