--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -46,7 +46,7 @@
                             android:layout_margin="16dp"
                             android:gravity="center"
                             android:maxLines="2"
-                            android:text="Ingresos de la \n semana"
+                            android:text="Ganancias de la \n semana"
                             android:textColor="@color/white"
                             android:textSize="18dp" />
 
